--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.mernote">
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MerNote">
         <activity
-            android:name=".NoteListActivity"
-            android:label="@string/app_name"
+            android:name=".MainActivity"
+            android:label="Note Keeper"
             android:theme="@style/Theme.MerNote.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,11 +20,19 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".NoteListActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MerNote.NoActionBar">
+<!--            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
+        <activity
             android:name=".NoteActivity"
             android:label="@string/title_activity_note"
-            android:theme="@style/Theme.MerNote.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.MerNote.NoActionBar"></activity>
     </application>
 
 </manifest>
