--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MerNote">
         <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
+        <activity
             android:name=".MainActivity"
             android:label="Note Keeper"
             android:theme="@style/Theme.MerNote.NoActionBar">
@@ -23,16 +26,20 @@
             android:name=".NoteListActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.MerNote.NoActionBar">
-<!--            <intent-filter>
+
+            <!--
+                <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".NoteActivity"
             android:label="@string/title_activity_note"
-            android:theme="@style/Theme.MerNote.NoActionBar"></activity>
+            android:theme="@style/Theme.MerNote.NoActionBar" />
+
     </application>
 
 </manifest>
