--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
 
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -38,6 +39,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'androidx.preference:preference:1.1.1'
+    //  implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'androidx.core:core:1.5.0-beta02'
+    implementation 'androidx.core:core:1.5.0-beta02'
+    implementation 'androidx.core:core:1.5.0-beta02'
+
     //  implementation 'com.android.support:appcompat-v7:27.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
